<resources>
    <string name="app_name">CatMemeGenerator</string>
    <string name="meme_text">Cat Meme Text</string>
    <string name="gif">Gif</string>
    <string name="photo">Photo</string>
    <string name="color">Color</string>
    <string name="select_filter">Select filter</string>
    <string name="size">Size</string>
    <string name="create">Create</string>
    <string name="image">Image</string>
    <string name="create_new_cat">Create New Cat Meme</string>

    <string-array name="filter_types">
        <item>None</item>
        <item>Blur</item>
        <item>Mono</item>
        <item>Sepia</item>
        <item>Negative</item>
        <item>Paint</item>
        <item>Pixel</item>
    </string-array>
</resources>